# UNI-MACS-

./: README.md
Algorithms/assignement1/: bridge.cpp  bsprime.cpp
Algorithms/assignment2/: increasing numbers.cpp  ohani and binary search tree.cpp
Algorithms/assignment3/: jwfw-harie-edu.cpp  selection-sort-count.cpp
Cryptography/assignment-1/: README.md  challenge1.py  challenge2.py  challenge3.py  challenge4.py  (+2 more)
Design Patterns/final/final_patterns-1.0.0/Final/: .gitignore  Makefile  final.md  pyproject.toml  requirements.txt
Design Patterns/final/final_patterns-1.0.0/Final/app/core/: campaign.py  campaign_observers.py  currency.py  product.py  receipt.py  receipt_item.py  report.py  shift.py
Design Patterns/final/final_patterns-1.0.0/Final/app/core/Models/: campaign.py  product.py  receipt.py  report.py
Design Patterns/final/final_patterns-1.0.0/Final/app/infrastructure/fastapi/: campaign.py  dependables.py  product.py  receipt.py  shift.py
Design Patterns/final/final_patterns-1.0.0/Final/app/infrastructure/sqlite/: campaign_db.py  product_db.py  receipt_db.py  receipt_item_db.py  shift_db.py
Design Patterns/final/final_patterns-1.0.0/Final/app/infrastructure/sqlite/inmemory/: campaigns_in_memory_db.py  producs_in_memory_db.py  receipt_in_memory_db.py  receipt_item_in_memory_db.py  shift_in_memory_db.py
Design Patterns/final/final_patterns-1.0.0/Final/app/runner/: __main__.py  cli.py  setup.py  store.db
Design Patterns/final/final_patterns-1.0.0/Final/app/tests/: test_campaigns_api.py  test_products_api.py  test_receipt_api.py  test_shift_api.py
(+333 files in other folders)
